调整一下按钮和会话框

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>登录</title>
     <style type="text/css">
         body{
-            background-color: #D0D0D0;
+            background-color: #FFF;
 
         }
         .td {
